--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
     --color2: #52339a;
 }
 
-footer, section {
+footer,
+section {
     padding: 100px 0;
 }
 
@@ -11,13 +12,14 @@ header {
     padding: 200px 0;
 }
 
-header, footer {
+header,
+footer {
     background: url(../img/pattern.png), var(--color1);
-background: url(../img/pattern.png), -moz-linear-gradient(left,  var(--color1) 0%, var(--color2) 100%);
-background: url(../img/pattern.png), -webkit-linear-gradient(left,  var(--color1) 0%,var(--color2) 100%);
-background: url(../img/pattern.png), linear-gradient(to right,  var(--color1) 0%,var(--color2) 100%);
-filter: url(../img/pattern.png), progid:DXImageTransform.Microsoft.gradient( startColorstr=var(--color1), endColorstr=var(--color2),GradientType=1 );
-background-size: contain;   
+    background: url(../img/pattern.png), -moz-linear-gradient(left, var(--color1) 0%, var(--color2) 100%);
+    background: url(../img/pattern.png), -webkit-linear-gradient(left, var(--color1) 0%, var(--color2) 100%);
+    background: url(../img/pattern.png), linear-gradient(to right, var(--color1) 0%, var(--color2) 100%);
+    filter: url(../img/pattern.png), progid:DXImageTransform.Microsoft.gradient(startColorstr=var(--color1), endColorstr=var(--color2), GradientType=1);
+    background-size: contain;
 }
 
 .itd_play {
@@ -39,11 +41,11 @@ background-size: contain;
 
 .itd_triangle {
     margin-right: -3px;
-width: 0;
-height: 0;
-border-style: solid;
-border-width: 10px 0 10px 20px;
-border-color: transparent transparent transparent var(--bs-white);
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 10px 0 10px 20px;
+    border-color: transparent transparent transparent var(--bs-white);
 }
 
 .btn-itd {
@@ -77,9 +79,13 @@ border-color: transparent transparent transparent var(--bs-white);
     width: 100%;
     height: 100%;
 }
+
 /* About */
 
-.about, .shedule {
+.about,
+.schedule,
+.author,
+.buy {
     background-color: #eee;
 }
 
@@ -101,7 +107,7 @@ border-color: transparent transparent transparent var(--bs-white);
 
 .line {
     width: 100px;
-    height: 3px;  
+    height: 3px;
     background-color: var(--color1);
     margin: 15px auto 30px;
 }
@@ -111,6 +117,56 @@ border-color: transparent transparent transparent var(--bs-white);
 .forwhom h5 {
     padding: 50px;
     border: 3px solid var(--color1);
+}
+
+/* schedule */
+
+.accordion-item {
+    margin-bottom: 0;
+}
+
+/* learning */
+
+.learning h5 {
+    padding: 25px;
+    border: 3px solid var(--color1);
+}
+
+.itd-mobile {
+    margin-top: 60px;
+    margin-bottom: 80px;
+}
+
+/* Author */
+.author {
+    padding-bottom: 0;
+}
+
+.itd-img {
+    max-width: 260px;
+}
+
+/* Reviews */
+
+.itd-block-img {
+    margin: auto;
+    width: 125px;
+    height: 125px;
+}
+
+.itd-block-img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 3px solid var(--color1);
+}
+
+.carousel-indicators [data-bs-target] {
+    background-color: var(--color2);
+}
+
+.carousel-indicators {
+    bottom: -40px;
 }
 
 /* Colors */
